# django-polls

./: README.rst  pyproject.toml
django_polls/: apps.py
django_polls.egg-info/: PKG-INFO  SOURCES.txt
